# sen-pwrctrl

./: .cproject  .project  CMakeLists.txt  Makefile  flash-board  launch-openocd  openocd-gdbserver  readme.md
eclipse/: RMT-senpwrctrl.launch
mk/: tgt_vars.mk
setup/: 98-openocd.rules  pico_setup.sh
src/: CMakeLists.txt  blink.cpp  blink.pio  main.cpp  slave_mem_i2c.cpp
